--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
-                        <div if.bind="map_visible">
+                        <div show.bind="map_visible">
                             <google-map
                                 longitude.two-way="longitude" 
                                 latitude.two-way="latitude"
