map for upload_photo. wip.

--- a/src/groups/upload-photo.html
+++ b/src/groups/upload-photo.html
@@ -12,8 +12,8 @@
         <div class="info-area">
             <compose view-model="./user-info" model.bind="status_record"></compose>
         </div>
-        <div class="photo-area" id="group-photo-area" if.bind="!status_record.map_visible">
-            <div class="buttons" if.bind="phase != 'photo-uploaded'">
+        <div class="photo-area" id="group-photo-area">
+            <div class="buttons" if.bind="phase != 'photo-uploaded' && ! status_record.map_visible">
                 <form submit.delegate="save()">
                     <div class="form-group" if.bind="phase=='ready-to-select'">
                         <label class="control-label ${status_record.user_id <= 0 ? 'disabled' : ''}" for="photos">
@@ -30,33 +30,30 @@
                     </div>
                 </form>
             </div>
-            <div if.bind="phase=='photo-uploaded'"
+            <div if.bind="phase=='photo-uploaded' && ! status_record.map_visible"
                 class="picture ${photo_list.length > 0 ? 'photos-ready' : 'photos-not-ready'}">
                 <a click.delegate="openDialog()">
                     <img src.bind="status_record.photo_url" height.bind="photo_height" id="uploaded-photo" />
                 </a>
             </div>
-        </div> <!--end photo areqa-->
-        <div show.bind="map_visible">
-            <google-map
-                longitude.two-way="status_record.photo_info.longitude" 
-                latitude.two-way="status_record.photo_info.latitude"
-                zoom.bind="status_record.photo_info.zoom"
-                map-click.delegate="create_marker($event)" 
-                bounds-change.delegate="bounds_changed($event)"
-                markers.bind="markers" 
-                auto-update-bounds="true" >
-            </google-map>
+            <div show.bind="status_record.map_visible">
+                <google-map longitude.two-way="status_record.photo_info.longitude"
+                    latitude.two-way="status_record.photo_info.latitude" zoom.bind="status_record.photo_info.zoom"
+                    map-click.delegate="create_marker($event)" bounds-change.delegate="bounds_changed($event)"
+                    markers.bind="markers" auto-update-bounds="true" style="height:720px;">
+                </google-map>
+            </div>
         </div>
+        <!--end photo areqa-->
         <div class="footer-area1">
             <span style="font-size: 150%;padding:6px;" innerhtml.bind="help_message"></span>
-            <p if.bind="status_record.duplicate" style="font-size:120%;color:red;padding:6px;">${'groups.duplicate' & t}</p>
+            <p if.bind="status_record.duplicate" style="font-size:120%;color:red;padding:6px;">${'groups.duplicate' & t}
+            </p>
             <!-- phase: ${phase} ${duplicate ? 'duplicate' : ''} -->
         </div>
         <div class="gallery-area">
             <p innerhtml.bind="explain_gallery"></p>
-            <button class="btn btn-primary btn-block"
-                disabled="${status_record.user_id < 1 ? 'disabled' : ''}"
+            <button class="btn btn-primary btn-block" disabled="${status_record.user_id < 1 ? 'disabled' : ''}"
                 click.delegate="view_gallery()">
                 ${"groups.view-gallery" & t}
             </button>
