--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -4,7 +4,7 @@
             <div class="row" id="story-list">
                 <div class="col-md-8 col-sm-12" if.bind="! editing_filters">
                     <div class="row">
-                        <form class="form-inline" style="margin-bottom:8px;margin-right:34px;">
+                        <form class="form-inline" style="margin-bottom:8px;margin-right:14px;">
                             <!--<div class="input-group" style="width:400px;" if.bind="user.privileges.DEVELOPER">
                                 <search-input value.bind="filter"
                                     placeholder="stories.filter" height="38"
@@ -30,7 +30,7 @@
                                     ${'stories.new' & t}
                                 </a>
                             </div>
-                            <div class="form-group" if.bind="user.editing && checked_stories.size>0">
+                            <div class="form-group" if.bind="user.editing && checked_stories.size>0" style="float:left;margin-left:20px;">
                                 <button class="btn btn-warning btn-sm" click.trigger="delete_checked_stories()">
                                     <i class="far fa-trash-alt fa-lg ${params.deleted_stories ? 'fa-rotate-180' : '' }"></i>
                                 </button>
