--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -50,8 +50,8 @@
         <div class="row options unselected ${theme.rtltr}" css="max-height:${option_list_height}px;min-height:132px;"
             if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
             <ul css="width:${width}px;padding-left:20px;" if.bind="true || unselected_options===[]">
-                <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : ''}">
-                    <a click.delegate="show_untagged()">${'multi-select.show-untagged' & t}</a>
+                <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : 'ready'} untag-button"
+                    click.delegate="show_untagged()">${show_untagged_caption}
                 </li>
                 <li
                     repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' : 'name' | take : 999 | spy : agent">
