--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -3,7 +3,11 @@
     <div class="content-area photo-detail unselectable">
         <div class="detail-header">
             <div style="float:left;cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
-                <chat-button chatroom_id.two-way="chatroom_id" caption.bind="'photos.add-details'" new-chatroom.delegate="create_chatroom()"></chat-button>
+                <chat-button chatroom_id.two-way="chatroom_id" 
+                             caption.bind="'photos.add-details'" 
+                             new-chatroom.delegate="create_chatroom()"
+                             chatroom-deleted.delegate="chatroom_deleted($event)">
+                </chat-button>
                 <i class="far fa-lg fa-arrow-up fa-rotate-90 ${next_class}" t="[title]photos.next-slide"
                     click.trigger="go_next($event)" if.bind="photo_ids.length > 1"></i>
                 <i class="far fa-lg fa-arrow-up" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
