--- a/src/user/chat.html
+++ b/src/user/chat.html
@@ -1,3 +1,3 @@
 <template>
-    <chatroom room_number.bind="chatroom_id"></chatroom>
+    <chatroom room_number.bind="chatroom_id" deleted.delegate="room_deleted()"></chatroom>
 </template>
