--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -31,8 +31,16 @@
                                 </a>
                             </div>
                             <div class="form-group" if.bind="user.editing && checked_stories.size>0" style="float:left;margin-left:20px;">
-                                <button class="btn btn-warning btn-sm" click.trigger="delete_checked_stories()">
+                                <button class="btn btn-warning btn-sm" click.trigger="delete_checked_stories()" t="[title]stories.undelete-now">
                                     <i class="far fa-trash-alt fa-lg ${params.deleted_stories ? 'fa-rotate-180' : '' }"></i>
+                                </button>
+                            </div>
+                            <div class="form-group" if.bind="user.editing && checked_stories.size>0" style="float:left;margin-left:20px;">
+                                <button class="btn btn-error btn-sm" 
+                                    click.trigger="delete_checked_stories_forever()" 
+                                    t="[title]stories.delete-forever"
+                                    style="padding:4px;border:2px solid red;">
+                                    <i class="far fa-trash-alt fa-lg" style="color:red;"></i>
                                 </button>
                             </div>
                             <div class="form-group">
