--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -222,7 +222,7 @@
                         <date-range 
                             label="photos.photos-date" 
                             base_date_str.bind="params.photos_date_str"
-                            range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]" 
+                            range_options.bind="[1,2,3,5,10,15,20,30,50,100]" 
                             span_size.bind="params.photos_date_span_size">
                         </date-range>
                     </div>
