--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -34,13 +34,32 @@
                 </button>
                 <button dir="rtl" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)"
                     interact-draggable.bind="theme.interact_setting"
-                    contextmenu.delegate="handle_context_menu(face, $event)" class="face"
-                    id.bind="'face-' + face.member_id" interact-dragmove.delegate="dragmove(face, $event)"
+                    contextmenu.delegate="handle_context_menu(face, $event)" 
+                    class="face"
+                    id.bind="'face-' + face.member_id" 
+                    interact-dragmove.delegate="dragmove(face, $event)"
                     interact-dragstart.delegate="dragstart(face, $event)"
-                    interact-dragend.delegate="dragend(face, $event)" style.bind="face_location(face)"
+                    interact-dragend.delegate="dragend(face, $event)" 
+                    style.bind="face_location(face)"
                     aubs-tooltip="text.bind:face.name">
                     <span style="position:relative">
                         <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="face.name"
+                            css="position:absolute;top:${face.r}px;left:${-face.r}px;width:${2*face.r}px;">
+                        </span>
+                    </span>
+                </button>
+                <button dir="rtl" repeat.for="article of articles" click.trigger="handle_article(article, $event, $index)"
+                    interact-draggable.bind="theme.interact_setting"
+                    contextmenu.delegate="handle_context_menu(face, $event)" 
+                    class="face is-article"
+                    id.bind="'face-' + article.member_id" 
+                    interact-dragmove.delegate="dragmove(face, $event)"
+                    interact-dragstart.delegate="dragstart(face, $event)"
+                    interact-dragend.delegate="dragend(face, $event)" 
+                    style.bind="face_location(article)"
+                    aubs-tooltip="text.bind:article.name">
+                    <span style="position:relative">
+                        <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="article.name"
                             css="position:absolute;top:${face.r}px;left:${-face.r}px;width:${2*face.r}px;">
                         </span>
                     </span>
@@ -56,27 +75,29 @@
                 </help>
                 <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help">
                 </help>
-                <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter" id="side-tool highlighter"
+                <button aubs-tooltip="text.bind:highlight_all;position.bind:hint_position;" class="side-tool highlighter" id="side-tool highlighter"
                     click.trigger="toggle_highlighting($event)">
                     <i class="fa${highlighting ? '' :'r'} fa-lg fa-circle"></i>
                 </button>
-                <!-- <button aubs-tooltip="text.bind:jump_to_story_page" if.bind="! settings.no_jump" class="side-tool story"
-                    click.trigger="jump_to_photo_page($event)"><i class="fa fa-lg fa-bars"></i></button> -->
-                <button aubs-tooltip="text.bind:copy_photo_url_text" class="side-tool copy-to-clipboard"
+                <button aubs-tooltip="text.bind:copy_photo_url_text;position.bind:hint_position;" class="side-tool copy-to-clipboard"
                     if.bind="user.editing"
                     click.delegate="copy_photo_url($event)"><i class="fa fa-lg fa-link"></i></button>
-                <button if.bind="slide.back" aubs-tooltip="text.bind:flip_text" class="side-tool flip-sides"
+                <button if.bind="slide.back" aubs-tooltip="text.bind:flip_text;position.bind:hint_position;" class="side-tool flip-sides"
                     click.delegate="flip_photo($event)"><i class="fa fa-lg fa-yin-yang"></i></button>
-                <button aubs-tooltip="text.bind:fullscreen" class="side-tool full-screen"
+                <button aubs-tooltip="text.bind:fullscreen;position.bind:hint_position;" class="side-tool full-screen"
                     click.delegate="makeFullScreen()"><i class="fa fa-lg fa-expand"></i></button>
-                <button show.bind="user.editing && ! cropping" aubs-tooltip="text.bind:crop" class="side-tool crop"
+                <button show.bind="user.editing && ! cropping" aubs-tooltip="text.bind:crop;position.bind:hint_position;" class="side-tool crop"
                     click.delegate="crop_photo($event)"><i class="fa fa-lg fa-crop-alt"></i></button>
-                <button show.bind="cropping" aubs-tooltip="text.bind:save_crop" class="side-tool crop"
+                <button show.bind="cropping" aubs-tooltip="text.bind:save_crop;position.bind:hint_position;" class="side-tool crop"
                     click.delegate="save_photo_crop($event)"><i class="fa fa-lg fa-save"></i></button>
-                <button show.bind="cropping" aubs-tooltip="text.bind:cancel_crop" class="side-tool cancel-crop"
+                <button show.bind="cropping" aubs-tooltip="text.bind:cancel_crop;position.bind:hint_position;" class="side-tool cancel-crop"
                     click.delegate="cancel_photo_crop($event)"><i class="fa fa-lg fa-undo-alt"></i></button>
-                <button show.bind="user.editing" aubs-tooltip="text.bind:rotate" class="side-tool rotate"
+                <button show.bind="user.editing" aubs-tooltip="text.bind:rotate;position.bind:hint_position;" class="side-tool rotate"
                     click.delegate="rotate_photo($event)"><i class="fa fa-lg fa-undo"></i></button>
+                <button if.bind="user.editing && marking_articles" aubs-tooltip="text.bind:mark_people_text;position.bind:hint_position;" class="side-tool crop"
+                    click.delegate="toggle_people_articles($event)"><i class="far fa-lg fa-smile"></i></button>
+                <button if.bind="user.editing && !marking_articles" aubs-tooltip="text.bind:mark_articles_text;position.bind:hint_position;" class="side-tool crop"
+                    click.delegate="toggle_people_articles($event)"><i class="far fa-lg fa-trees"></i></button>
             </div>
         </div>
         <div>
