--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -48,18 +48,18 @@
                         </span>
                     </span>
                 </button>
-                <button dir="rtl" repeat.for="article of articles" click.trigger="handle_article(article, $event, $index)"
+                <button dir="rtl" repeat.for="face of articles" click.trigger="handle_article(face, $event, $index)"
                     interact-draggable.bind="theme.interact_setting"
                     contextmenu.delegate="handle_context_menu(face, $event)" 
                     class="face is-article"
-                    id.bind="'face-' + article.member_id" 
+                    id.bind="'article-' + face.article_id" 
                     interact-dragmove.delegate="dragmove(face, $event)"
                     interact-dragstart.delegate="dragstart(face, $event)"
                     interact-dragend.delegate="dragend(face, $event)" 
-                    style.bind="face_location(article)"
-                    aubs-tooltip="text.bind:article.name">
+                    style.bind="face_location(face)"
+                    aubs-tooltip="text.bind:face.name">
                     <span style="position:relative">
-                        <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="article.name"
+                        <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="face.name"
                             css="position:absolute;top:${face.r}px;left:${-face.r}px;width:${2*face.r}px;">
                         </span>
                     </span>
